--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,15 @@
-
+server:
+  port: 80
+spring:
+  datasource:
+    druid:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://localhost:3306/ceepdata?serverTimezone=Asia/Shanghai
+      username: root
+      password: czmhhxx.
+mybatis-plus:
+  global-config:
+    db-config:
+      id-type: auto
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
