--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,9 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.9",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "10.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
